# project-automatron-vmark

./: .env.example  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  logo-preview.html  package-lock.json  strategic-report.html  tmp_start_backend.cmd
.claude/: settings.json  (+1 more)
orchestrator/: pyproject.toml
orchestrator/orchestrator/: aider_agent.py  auth.py  build_check.py  config.py  execution_contract.py  logsafe.py  main.py  observability.py  orchestrator.py  preview.py  skills.py
orchestrator/orchestrator/api/: routes.py  webhook_github.py  websocket.py
orchestrator/orchestrator/deployment_v2/: __init__.py  artifacts.py  profile.py  registry.py  stack_detector.py  strategy.py  templates.py
orchestrator/orchestrator/docker_engine/: manager.py
orchestrator/orchestrator/github/: issues.py
orchestrator/orchestrator/github_actions/: manager.py
orchestrator/orchestrator/graph/: edges.py  graph.py  runner.py  state.py
orchestrator/orchestrator/llm/: configuration.py  provider.py
orchestrator/orchestrator/models/: project.py  stages.py
orchestrator/orchestrator/repository/: manager.py
orchestrator/prompts/: architect_github_v1.txt  architect_v1.txt  builder_v1.txt  feedback_classifier_v1.txt  issue_from_prompt_v1.txt  reviewer_v1.txt
orchestrator/scripts/: init-nextjs.sh
orchestrator/tests/: test_architect.py  test_docker_engine.py  test_execution_contract.py  test_github_actions_manager.py  test_graph.py  test_llm_configuration.py  test_preflight.py  test_runner.py  test_validation_workspace.py  test_validator_node.py
(+59 files in other folders)
